--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ footer{
     margin-top: 50px;
     background-color: antiquewhite;
     color: black;
+    text-align: center;
 }
 .section{
     text-align: center;
